--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,31 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + Vue</title>
+  <title>Asociación Acueducto La Aguadita</title>
+
+  <!-- Ícono de la app -->
+  <link rel="icon" href="/favicon.png" type="image/x-icon" />
+
+  <!-- Descripción para motores de búsqueda -->
+  <meta name="description"
+    content="Plataforma de gestión documental y evidencias de la Asociación Acueducto La Aguadita de Fresno, Tolima." />
+
+  <!-- Palabras clave -->
+  <meta name="keywords" content="Acueducto, Fresno Tolima, comunidad, gestión, documentos, imágenes" />
+
+  <!-- Autor -->
+  <meta name="author" content="Asociación Acueducto La Aguadita" />
+
+  <!-- Meta Open Graph para compartir en redes -->
+  <meta property="og:title" content="Asociación Acueducto La Aguadita" />
+  <meta property="og:description" content="Consulta documentos y visualiza evidencias de gestión comunitaria." />
+  <meta property="og:image" content="/preview.png" />
+  <meta property="og:type" content="website" />
+  <meta property="og:locale" content="es_CO" />
+  <meta property="og:url" content="https://tu-dominio-en-render.com" />
+
+  <!-- Tema para navegadores móviles -->
+  <meta name="theme-color" content="#2e7d32" />
 </head>
 
 <body>
