Agregando robots para el buscador

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,12 +13,9 @@
   <!-- Descripción para motores de búsqueda -->
   <meta name="description"
     content="Plataforma de gestión documental y evidencias de la Asociación Acueducto La Aguadita de Fresno, Tolima." />
-
-  <!-- Palabras clave -->
   <meta name="keywords" content="Acueducto, Fresno Tolima, comunidad, gestión, documentos, imágenes" />
-
-  <!-- Autor -->
-  <meta name="author" content="Asociación Acueducto La Aguadita" />
+  <meta name="author" content="Acueducto La Aguadita" />
+  <meta name="robots" content="index, follow">
 
   <!-- Meta Open Graph para compartir en redes -->
   <meta property="og:title" content="Asociación Acueducto La Aguadita" />
