--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,6 +3,17 @@
 
 <head>
   <meta charset="UTF-8" />
+  <!-- Google Tag Manager -->
+  <script>(function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-TWVTNQ2K');</script>
+  <!-- End Google Tag Manager -->
+
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Asociación Acueducto La Aguadita</title>
@@ -27,9 +38,16 @@
 
   <!-- Tema para navegadores móviles -->
   <meta name="theme-color" content="#2e7d32" />
+
+  <meta name="google-site-verification" content="AfWl5ItiIDCgFTIwL4Vy2i4hoiH_Z-iDRMqZpLG9tV8" />
 </head>
 
 <body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TWVTNQ2K" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+
   <main id="app"></main>
   <script type="module" src="/src/main.js"></script>
 </body>
